# shot

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  help.txt  wscript
cmake/: FindGDI32.c  FindGDI32.cmake  FindXrandr.cmake
docs/: help.txt  shot.1
scrsh/: ArgumentQueue.cs  ExitStatus.cs  MainForm.Designer.cs  MainForm.cs  Program.cs  ProgramOptionParser.cs  ProgramOptions.cs  Region.cs  RegionSelectionForm.Designer.cs  RegionSelectionForm.cs  WindowHelper.cs  scrsh.csproj  scrsh.sln
scrsh/Properties/: AssemblyInfo.cs
src/: .gitignore  bitmap.c  bitmap.h  bitmap_win.c  bitmap_x11.c  grab.h  grab_win.c  grab_x11.c  help.h.in  help.txt  monitor.c  monitor.h  monitor_mgr.c  monitor_mgr.h  monitor_mgr_win.c  monitor_mgr_x11.c  monitor_win.c  monitor_x11.c  region.c  region.h  shot.c  version.h.in  window.h  window_win.c  window_x11.c
src/region_picker/: active_monitor.c  active_monitor.h  active_window.h  active_window_win.c  active_window_x11.c  errors.h  interactive.h  interactive_common.c  interactive_common.h  interactive_win.c  interactive_x11.c  monitor.c  monitor.h  string.c  string.h  window.h  window_win.c  window_x11.c
